<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/custom_bg"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_marginTop="45dp"
        android:layout_marginStart="25dp"
        android:textStyle="bold|italic"/>
    <TextView
        android:id="@+id/join"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/join"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:textStyle="italic"
        android:layout_marginBottom="60dp"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/your_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/custom_input_bg"
        android:textSize="15sp" />
    <EditText
        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/your_email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:layout_marginVertical="5dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/custom_input_bg"
        android:textSize="15sp" />
    <EditText
        android:id="@+id/signup_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:layout_marginVertical="5dp"
        android:inputType="textPassword"
        android:background="@drawable/custom_input_bg"
        android:textSize="15sp" />
    <EditText
        android:id="@+id/re_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/re_type_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:layout_marginVertical="5dp"
        android:inputType="textPassword"
        android:background="@drawable/custom_input_bg"
        android:textSize="15sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_btn"
        android:text="@string/register"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:id="@+id/signup_register_btn"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_btn"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:id="@+id/signup_cancel_btn"
        />

</LinearLayout>
