<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/custom_bg"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:padding="2dp"
        android:layout_marginStart="230dp"
            />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/amount"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20sp"
        android:padding="2dp"
        android:layout_toEndOf="@id/balance"
        />
    <ListView
        android:id="@+id/custom_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/black"
        android:dividerHeight="2dp"
        android:layout_below="@id/balance"
        android:listSelector="@color/grey"
        android:scrollbarAlwaysDrawVerticalTrack="true"

        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:id="@+id/item_confirm_button"
        android:text="@string/confirm"
        android:textSize="14sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:textStyle="bold"
        android:background="@drawable/confrim_btn_bg"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:id="@+id/logout"
        android:textSize="14sp"
        android:textStyle="bold"
        android:background="@drawable/confrim_btn_bg"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="20dp"
        />
</RelativeLayout>